Bug 489931 - Kate crashes using search function is navigation bar
Summary: Kate crashes using search function is navigation bar
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-07-08 14:53 UTC by Pozsgay Máté
Modified: 2024-07-19 11:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Trace of the crash (14.45 KB, text/plain)
2024-07-08 14:53 UTC, Pozsgay Máté
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pozsgay Máté 2024-07-08 14:53:03 UTC
Created attachment 171480 [details]
Trace of the crash

SUMMARY
As the title says. 

STEPS TO REPRODUCE
1. Open Kate.
2. Open a document.
3. Click on (or invoke with a shortcut) the navigation bar (Breadcrumbs)
4. Start typing in order to search

OBSERVED RESULT
After a few character (most of the times even at the first one) Kate crashes.

EXPECTED RESULT
Do not crash, show the filtered results instead of.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Ubuntu 22.04 latest + updated
Kate version: 24.07.70 (latest master from Git)
KDE Framework: 6.4.0
Qt Version: 6.6.3

ADDITIONAL INFORMATION
Compiled by myself including Qt.
Based on the stack trace looks like an infinite recursion:
Comment 1 Waqar Ahmed 2024-07-08 15:55:51 UTC
Git commit 8bdcbaf20bc9319a06a50ed3046706cd6c0ad087 by Waqar Ahmed.
Committed on 08/07/2024 at 15:55.
Pushed by waqar into branch 'master'.

Fix crash in urlbar

M  +3    -1    apps/lib/kateurlbar.cpp

https://invent.kde.org/utilities/kate/-/commit/8bdcbaf20bc9319a06a50ed3046706cd6c0ad087
Comment 2 Waqar Ahmed 2024-07-19 11:16:08 UTC
Git commit 47424d535c743fd22186adb5f74b18dab1bec6c9 by Waqar Ahmed.
Committed on 19/07/2024 at 11:15.
Pushed by waqar into branch 'release/24.05'.

Fix crash in urlbar
(cherry picked from commit 8bdcbaf20bc9319a06a50ed3046706cd6c0ad087)

M  +3    -1    apps/lib/kateurlbar.cpp

https://invent.kde.org/utilities/kate/-/commit/47424d535c743fd22186adb5f74b18dab1bec6c9