Fix crash in urlbar

BUG: 489931